refactor project structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     volumes:
       - ./app/:/usr/src/app/
     env_file:
-      - ./.env
+      - .env
     links:
       - db
     depends_on:
