--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,9 @@ services:
     ports:
       - 8000:8000
     command: >
-      sh -c "python manage.py migrate
-      && python manage.py runserver 0.0.0.0:8000"
+      sh -c "python3 manage.py makemigrations 
+      && python3 manage.py migrate
+      && python3 manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./app/:/usr/src/app/
     env_file:
